# nomad_oasis_jn

./: docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx_base_conf  nomad.yaml
