[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]==1.4.2"]

[project.urls]
repository = "https://github.com/Jenny-Nelson-Group/nomad_oasis_jn"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
  'nomad-material-processing @ git+https://github.com/FAIRmat-NFDI/nomad-material-processing.git@103-add-specialized-combinatorialsample-schema',
  'nomad-baseclasses @ git+https://github.com/Jenny-Nelson-Group/nomad-baseclasses.git',
  'nomad-hysprint',
  'hzb-combinatorial-libraries @ git+https://github.com/Jenny-Nelson-Group/hzb-combinatorial-libraries-plugin.git',
  'nomad-chemical-energy @ git+https://github.com/Jenny-Nelson-Group/nomad-chemical-energy.git',
  "nomad-gui==2.0.0a2.dev583",
  "nomad-north-jupyter>=0.2.5"
]
jupyter = [
'voila',
'ipyaggrid',
'ipyvuetify',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
'ipympl',
'electrokitty',
#'baybe',
'ipython<9',
'ipykernel<7',
'pyvis',
'lmfit',
'jupyterlab_h5web',
'jupyterlab>4.0',
'seaborn', 
'jupyterlab-spreadsheet-editor' # 'jupyterhub<5','oauthenticator<16'
]

dev = ["nomad-lab[infrastructure, dev]==1.4.2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6", "pyzmq==27.0.2"]
prerelease = "explicit"

[tool.uv.sources]
nomad-hysprint = { git = "https://github.com/Jenny-Nelson-Group/nomad-hysprint.git", rev = "9b9eb1a056a6ca7851e10646d7ed83fd63031b4d" }
nomad-baseclasses = { git = "https://github.com/Jenny-Nelson-Group/nomad-baseclasses.git", rev = "94afad52d1d3632aaf1fc6d443d46eb6e4df0438" }
hzb-combinatorial-libraries = { git = "https://github.com/Jenny-Nelson-Group/hzb-combinatorial-libraries-plugin.git", rev = "673725c36c05886205af0e0f114be8c5e37cec96" }
nomad-chemical-energy = { git = "https://github.com/Jenny-Nelson-Group/nomad-chemical-energy.git", rev = "9688363c1c624df0cfd0b5e916588258b1c821ce" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
